--- a/index.html
+++ b/index.html
@@ -1,1 +1,20 @@
-
+<html>
+<head>
+    <meta charset="UTF-8">
+    <title>Document</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link href='style.css' rel='stylesheet'>
+</head>
+<body>
+   <div class="jumbotron">
+      <h1>Search for a movie</h1>
+       <form action="">
+        <input type="text" class='form__input' placeholder="Search movie">
+        </form>
+   </div>
+    
+    <div id="authors" class="row"></div>
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>  
+    <script src='script.js'></script>
+</body>
+</html>
